<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textStato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/stato"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLivello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/livello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStato" />

    <TextView
        android:id="@+id/textApertura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/apertura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLivello" />

    <TextView
        android:id="@+id/textModalita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/modalita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textApertura" />

    <Button
        android:id="@+id/btnManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="404dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/modalit_manuale"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/openBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:max="5"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnManual" />

    <TextView
        android:id="@+id/lblOpenBar"
        android:layout_width="41dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/barApertura"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openBar" />

    <TextView
        android:id="@+id/lblStato"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblStato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLivello"
        android:layout_width="88dp"
        android:layout_height="17dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblLivello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStato" />

    <TextView
        android:id="@+id/lblApertura"
        android:layout_width="89dp"
        android:layout_height="17dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblApertura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLivello" />

    <TextView
        android:id="@+id/lblModalita"
        android:layout_width="89dp"
        android:layout_height="17dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblModalita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblApertura" />

    <Button
        android:id="@+id/btnBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="212dp"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="73dp"
        android:layout_height="21dp"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="281dp" />

</androidx.constraintlayout.widget.ConstraintLayout>